--- a/src/app/components/profile/edit-profile-body/EditProfileBody.module.scss
+++ b/src/app/components/profile/edit-profile-body/EditProfileBody.module.scss
@@ -5,6 +5,15 @@
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
+	h4 {
+		border-bottom: 1px solid #c0cdd9;
+		color: #282c37;
+		font-size: 13px;
+		font-weight: 700;
+		margin-bottom: 8px;
+		padding-bottom: 8px;
+		text-transform: uppercase;
+	}
 	input {
 		height: 45px;
 		font-size: $fontSizeMd;
@@ -73,6 +82,21 @@
 		gap: 20px;
 		.linksLogo {
 			margin-bottom: 10px;
+		}
+	}
+	.imageUpload {
+		display: flex;
+		flex-direction: column;
+		gap: 10px;
+		label {
+			display: flex;
+			justify-content: flex-start;
+			font-size: 14px;
+		}
+		span {
+			display: block;
+			font-size: 12px;
+			margin-top: 4px;
 		}
 	}
 }
