--- a/src/app/components/skeleton/feed-header/FeedHeaderSkeleton.module.scss
+++ b/src/app/components/skeleton/feed-header/FeedHeaderSkeleton.module.scss
@@ -6,13 +6,14 @@
 	position: sticky;
 	top: 0px;
 	z-index: 2;
-	border-bottom: 1px solid $heather;
+	// border-bottom: 1px solid $heather;
 	padding-top: 20px;
 	background-color: $mystic;
 	height: 45px;
 
 	@include breakpoint(sm) {
 		margin-top: 0;
+		padding-top: 0;
 	}
 	.header {
 		background-color: lighten($white, 7%);
