fix: updated user cards

--- a/src/app/components/user/user-box/UserBox.module.scss
+++ b/src/app/components/user/user-box/UserBox.module.scss
@@ -2,49 +2,14 @@
 
 .peopleBox {
 	width: 100%;
-	padding: 1rem;
+	padding: 10px;
 	display: flex;
 	gap: 1rem;
 	flex-direction: column;
 	position: relative;
-	border-bottom: 1px solid $heather;
+	margin-bottom: 1rem;
 	&:hover {
 		background-color: lighten($white, 15%);
 		cursor: pointer;
-	}
-	.addUser,
-	button {
-		position: absolute;
-		right: 15px;
-		top: 15px;
-		cursor: pointer;
-		width: fit-content;
-	}
-	.top {
-		display: flex;
-		align-items: center;
-		gap: 10px;
-		img {
-			border-radius: 4px;
-		}
-		.displayName {
-			display: flex;
-			flex-direction: column;
-			gap: 3px;
-			strong {
-				font-weight: 500;
-				font-size: $fontSizeLg;
-			}
-			span {
-				font-weight: 300;
-				color: $lightText;
-				font-size: $fontSizeMd;
-			}
-		}
-	}
-	.bio {
-		// padding-left: 55px;
-		font-size: 13px;
-		color: $charade;
 	}
 }
