--- a/src/app/components/user/user-box/UserHeader.module.scss
+++ b/src/app/components/user/user-box/UserHeader.module.scss
@@ -8,6 +8,8 @@
 	background-color: $darkerMystic;
 	border-radius: 6px;
 	overflow: hidden;
+	border: 1px solid $heather;
+
 	.coverPhoto {
 		height: 145px;
 		background-color: $mystic;
