wip: updating prisma to 5.0.0

--- a/src/app/components/posts/post-card/post-card-footer/PostCardFooter.module.scss
+++ b/src/app/components/posts/post-card/post-card-footer/PostCardFooter.module.scss
@@ -9,7 +9,8 @@
 	justify-content: space-evenly;
 	.icon,
 	.mobileIcon,
-	.replyIcon {
+	.replyIcon,
+	.retweetIcon {
 		display: flex;
 		align-items: center;
 		gap: 5px;
