wip: fixing loading page width

--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -11,6 +11,7 @@
 	padding-top: 0;
 	color: $charade;
 	padding-bottom: 2rem;
+	min-width: 600px;
 	@include breakpoint(sm) {
 		min-width: calc(100% - 284px);
 	}
