--- a/src/app/components/posts/post-card/post-card-footer/PostCardFooter.module.scss
+++ b/src/app/components/posts/post-card/post-card-footer/PostCardFooter.module.scss
@@ -6,7 +6,7 @@
 	width: 100%;
 	display: flex;
 	align-items: center;
-	justify-content: space-evenly;
+	justify-content: space-between;
 	.icon,
 	.mobileIcon,
 	.replyIcon,
